--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-webview": "^13.2.2",
-    "react-native-youtube": "^2.0.2"
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
